--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -3,16 +3,20 @@
 
 {# ... #}
 
+{% block title %}Connectez-vous{% endblock %}
+
 {% block body %}
+<h1>Connectez-vous</h1>
+    
     {% if error %}
         <div class="mt-4 alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
     <form action="{{ path('app_login') }}" method="post">
-        <label for="username" class="mt-4 form-label">Nom d'utilisateur:</label>
+        <label for="username" class="mt-4 label">Nom d'utilisateur:</label>
         <input type="text" id="username" name="_username" class="form-control"/>
 
-        <label for="password" class="mt-4 form-label">Password:</label>
+        <label for="password" class="mt-4 label">Mot de passe:</label>
         <input type="password" id="password" name="_password" class="form-control"/>
 
         {# If you want to control the URL the user is redirected to on success
