--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
         {% block stylesheets %}           
             {{ encore_entry_link_tags('app') }}
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ asset('css/main.css') }}">
         {% endblock %}
 
         {% block javascripts %}
@@ -21,14 +22,11 @@
 
     {{ include('includes/_header.html.twig') }}
 
-    <div class="container pt-4">
-
         {% for flash_message in app.flashes('success') %}
-            <div class="alert alert-success" role="alert">{{ flash_message }}</div>
+            <div class="alert alert-success text-center" role="alert">{{ flash_message }}</div>
         {% endfor %}
 
         {% block body %}{% endblock %}
-    </div>
 
     {{ include('includes/_footer.html.twig') }}
     
