--- a/templates/figure/show.html.twig
+++ b/templates/figure/show.html.twig
@@ -3,42 +3,52 @@
 {% block title %}Figure{% endblock %}
 
 {% block body %}
-    <h1>Figure</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ figure.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ figure.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ figure.description }}</td>
-            </tr>
+{% if figure.image %}
+{% set background = asset('uploads/images/' ~ figure.image) %}
+{% else %}
+{% set background = asset('media/images/default.jpg') %}
+{% endif %}
 
-            {% if figure.image %}
-            <tr>
-                <th>Image</th>
-                <td><img src="{{ asset('uploads/images/' ~ figure.image) | imagine_filter('figure_thumb') }}" alt="{{ figure.name }}" /></td>
-            </tr>
-           {% endif %}
+<div class="container mt-4">
 
-            <tr>
-                <th>Date</th>
-                <td>{{ figure.creationDate ? figure.creationDate|date('d-m-Y') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="image-block">
+        <div class=" bg-image d-flex justify-content-center align-items-center"
+        style="
+        background-image: url('{{ background }}');
+        height: 100vh;
+        background-size: cover;">
+            <div class="mask p-5" style="background-color: rgba(0, 0, 0, 0.1);">
+                <h1 class="mb-3 text-white text-center">{{ figure.name }}</h1>
+            </div>
+        </div>
+
     {% if is_granted("POST_EDIT", figure) %}
-    <a href="{{ path('app_figure_index') }}">Retour à la liste</a>
-
-    <a href="{{ path('app_figure_edit', {'id': figure.id}) }}">éditer</a>
-    
-    {{ include('figure/_delete_form.html.twig') }}
+    <div class="edit-block row row-cols-2 align-items-center justify-content-start">
+        <div class="col-6">
+            <a href="{{ path('app_figure_edit', {'id': figure.id}) }}">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+            <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
+            </svg>
+            </a>
+        </div>
+        <div class="col-6">
+            {{ include('figure/_delete_form.html.twig') }}
+        </div>
+    </div>
+    <div class="edit-block-background"></div>
     {% endif %}
+    
+    </div>
 
+    <p class="mt-4">
+    {{ figure.description }}</td>
+    </p>
+    
+    <div class="trick-info mt-4">
+        <div>
+            Postée le {{ figure.creationDate ? figure.creationDate|date('d-m-Y') : '' }}
+        </div>
+    </div>
+</div>
 {% endblock %}
