--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,31 +1,72 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}SnowTricks{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<h1>SnowTricks</h1>
+<!-- hero -->
+<div class="bg-image d-flex justify-content-center align-items-center"
+  style="
+    background-image: url('{{ asset('media/images/hero.jpg') }}');
+    height: 100vh;
+    background-size: cover;">
+    <div class="mask p-5" style="background-color: rgba(0, 0, 0, 0.1);">
+        <h1 class="mb-3 text-white text-center">SnowTricks</h1>
+        <h4 class="mb-3 text-white text-center">Site collaboratif pour apprendre des figures (tricks)</h4>
+    </div>
+</div>
+<!-- hero -->
 
-    {% for flash_message in app.flashes('success') %}
-        <div class="alert alert-success" role="alert">{{ flash_message }}</div>
-    {% endfor %}
+<div class="container pt-4">
+
+{% for flash_message in app.flashes('success') %}
+    <div class="alert alert-success" role="alert">{{ flash_message }}</div>
+{% endfor %}
 
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
     <p>Bienvenue {{ app.user.name }}</p>
 {% endif %}
 
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
+
 {% for figure in figures %}
-    <div class="card">
-        <h3>{{ figure.name }}</h3>
-        <a href="{{ path('app_figure_show', {'id': figure.id, 'slug': figure.slug}) }}">
-        <img src="{{ asset('uploads/images/' ~ figure.image) | imagine_filter('figure_thumb') }}" alt="{{ figure.name }}" />
-        </a>
+
+{% if figure.image %}
+{% set thumb = asset('uploads/images/' ~ figure.image) | imagine_filter('figure_thumb') %}
+{% else %}
+{% set thumb = asset('media/images/default.jpg') | imagine_filter('figure_thumb') %}
+{% endif %}
+
+<div class="col mb-3 d-flex align-items-stretch">
+    <div class="card rounded-0">
+        <a href="{{ path('app_show', {'id': figure.id, 'slug': figure.slug}) }}">
+        
+        <img class="img-fluid" src="{{ thumb }}" alt="{{ figure.name }}" /></a>
+      
+        <div class="card-body p-2">
+            <div class="row row-cols-3 align-items-center justify-content-start">
+                <div class="col-9 col-sm-8">
+                    <a href="{{ path('app_show', {'id': figure.id, 'slug': figure.slug}) }}">
+                    <h5 class="card-title">{{ figure.name | u.truncate(17) }}</h5>
+                    </a>
+                </div>
+                {% if is_granted("POST_EDIT", figure) %}
+                <div class="col-1">
+                    <a href="{{ path('app_figure_edit', {'id': figure.id}) }}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                    <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
+                    </svg>
+                    </a>
+                </div>
+                <div class="col-1">
+                {{ include('figure/_delete_form.html.twig') }}
+                </div>
+                {% endif %}
+            </div>
+        </div>
     </div>
-
-        {% endfor %}
-
+</div>
+{% endfor %}
+</div>
+</div>
 {% endblock %}
