--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -6,12 +6,14 @@
 {% block title %}Connectez-vous{% endblock %}
 
 {% block body %}
-<h1>Connectez-vous</h1>
-    
-    {% if error %}
-        <div class="mt-4 alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
 
+<h1 class="text-center mt-4">Connectez-vous</h1>
+    
+{% if error %}
+<div class="mt-4 alert alert-danger" role="alert">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+{% endif %}
+
+<div class="form-container mt-4">
     <form action="{{ path('app_login') }}" method="post">
         <label for="username" class="mt-4 label">Nom d'utilisateur:</label>
         <input type="text" id="username" name="_username" class="form-control"/>
@@ -19,13 +21,15 @@
         <label for="password" class="mt-4 label">Mot de passe:</label>
         <input type="password" id="password" name="_password" class="form-control"/>
 
+
+        <p class="mt-4">
+            <a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié?</a>
+        </p>
         {# If you want to control the URL the user is redirected to on success
         <input type="hidden" name="_target_path" value="/account"/> #}
 
-        <button type="submit" class="mt-4 btn btn-primary">Se connecter</button>
+        <button type="submit" class="mt-4 btn btn-form">Se connecter</button>
     </form>
+</div>
 
-    <p class="mt-4">
-    <a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié?</a>
-    </p>
 {% endblock %}
