--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -3,11 +3,18 @@
 {% block title %}E-mail de réinitialisation du mot de passe envoyé{% endblock %}
 
 {% block body %}
+
+<div class="container mt-4">
     <p class="mt-4">
         Si un compte correspondant à votre adresse e-mail existe, 
         un e-mail vient d'être envoyé contenant un lien que vous pouvez 
         utiliser pour réinitialiser votre mot de passe. Ce lien expirera 
         dans 1 heure.
     </p>
-    <p>Si vous ne recevez pas d'e-mail, veuillez vérifier votre dossier spam ou <a href="{{ path('app_forgot_password_request') }}">réessayer</a>.</p>
+
+    <p>
+        Si vous ne recevez pas d'e-mail, veuillez vérifier votre dossier spam ou <a href="{{ path('app_forgot_password_request') }}">réessayer</a>.
+    </p>
+</div>
+
 {% endblock %}
