--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -3,10 +3,14 @@
 {% block title %}Réinitialisez votre mot de passe{% endblock %}
 
 {% block body %}
-    {% for flash_error in app.flashes('reset_password_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %}
-    <h1>Réinitialisez votre mot de passe</h1>
+
+{% for flash_error in app.flashes('reset_password_error') %}
+<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+{% endfor %}
+
+<h1 class="text-center mt-4">Mot de passe oublié</h1>
+
+<div class="form-container mt-4">
 
     {{ form_start(requestForm) }}
         {{ form_row(requestForm.email) }}
@@ -17,6 +21,9 @@
             </small>
         </div>
 
-        <button class="btn btn-primary mt-4">Valider</button>
+        <button class="btn btn-form mt-4">Réinitialisez votre mot de passe</button>
     {{ form_end(requestForm) }}
+
+</div>
+
 {% endblock %}
