--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -3,10 +3,17 @@
 {% block title %}Réinitialisez votre mot de passe{% endblock %}
 
 {% block body %}
-    <h1>Réinitialisez votre mot de passe</h1>
 
+<h1 class="text-center mt-4">Réinitialisez votre mot de passe</h1>
+
+<div class="container mt-4">
+
+    <div class="form-container mt-4">
     {{ form_start(resetForm) }}
         {{ form_row(resetForm.plainPassword) }}
-        <button class="btn btn-primary">Valider</button>
+        <button class="btn btn-form">Valider</button>
     {{ form_end(resetForm) }}
+    </div>
+</div>
+
 {% endblock %}
