--- a/templates/figure/_form.html.twig
+++ b/templates/figure/_form.html.twig
@@ -3,13 +3,21 @@
     {{ form_row(form.description,{ 'attr': {'rows': '12'}}) }}
     {{ form_row(form.category) }}
 
-    <div class="form-figure-btn row row-cols-2 align-items-center justify-content-start">
+
+{% if add is defined %}
+<div>
+    <button class="btn btn-form">{{ button_label|default('Valider') }}</button>
+</div>
+{% else %}
+<div class="form-figure-btn row row-cols-2 align-items-center justify-content-start">
     <div class="col-6">
     <button class="btn btn-form btn-form-save">{{ button_label|default('Valider') }}</button>
     </div>
-{{ form_end(form) }}
 
     <div class="col-6">
     {{ include('figure/_delete_form.html.twig') }}
     </div>
-    </div>
+</div>
+{% endif %}
+
+{{ form_end(form) }}
