--- a/templates/image/_form.html.twig
+++ b/templates/image/_form.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
     <input type="hidden" name="image_figure" value="{{ figure }}">
-    <button class="btn btn-form">{{ button_label|default('Ajouter') }}</button>
+    <button class="btn btn-form">{{ button_label|default('Valider') }}</button>
 {{ form_end(form) }}
