--- a/templates/image/edit.html.twig
+++ b/templates/image/edit.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier l'image à la une{% endblock %}
+{% block title %}Modifier l'image{% endblock %}
 
 {% block body %}
-    <h1 class="container mt-4">Modifier l'image à la une</h1>
+    <h1 class="container mt-4">Modifier l'image</h1>
 
     <div class="container mt-4">
+    <img class="mb-4" src="{{ asset('uploads/images/' ~ image.url) }}" />
+
     {{ include('image/_form.html.twig') }}
     </div>
     
