--- a/templates/image/show.html.twig
+++ b/templates/image/show.html.twig
@@ -1,26 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Image{% endblock %}
+{% block title %}{{ image.name }}{% endblock %}
 
 {% block body %}
-    <h1>Image</h1>
+    <h1 class="container mt-4">{{ image.name }}</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ image.id }}</td>
-            </tr>
-            <tr>
-                <th>Url</th>
-                <td>{{ image.url }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="container mt-4">
+    <img class="img-fluid" src="{{ asset('uploads/images/' ~ image.url) }}" alt="{{ image.name }}" />
 
-    <a href="{{ path('app_image_index') }}">back to list</a>
+    <p class="mt-4">
+    Image liée à la figure : <a href="{{ path('app_show', {
+        'id': image.figure.id, 
+        'slug': image.figure.slug
+        }) }}">{{ image.figure.name }}</a>
+    </p>
+    </div>
 
-    <a href="{{ path('app_image_edit', {'id': image.id}) }}">edit</a>
-
-    {{ include('image/_delete_form.html.twig') }}
 {% endblock %}
