--- a/templates/figure/edit.html.twig
+++ b/templates/figure/edit.html.twig
@@ -27,7 +27,7 @@
     
     <div class="edit-block row row-cols-2 align-items-center justify-content-start">
         <div class="col-6">
-            <a href="{{ path('app_image_edit', {'figure': figure.id}) }}">
+            <a href="{{ path('app_image_figure', {'figure': figure.id}) }}">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
             <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
             </svg>
@@ -55,7 +55,7 @@
 
 <div class="col mb-3 d-flex align-items-stretch">
     <div class="card rounded-0 border-0 text-center">
-        <a href="">
+        <a href="{{ path('app_video_new', {'figure': figure.id}) }}">
         <img class="img-fluid" src="{{ asset('media/images/default.jpg') | imagine_filter('figure_thumb') }}" alt="{{ figure.name }}" />
         <span>Ajouter une vidéo</span>
         </a>
@@ -71,7 +71,7 @@
         
         <div class="form-add-media row row-cols-2">
             <div class="col d-flex align-items-stretch justify-content-end">
-                <a href="{{ path('app_image_edit', {'figure': figure.id}) }}">
+                <a href="{{ path('app_image_edit', {'image': image.id}) }}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
                 <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
                 </svg>
@@ -86,6 +86,32 @@
 </div>
 {% endfor %}
 {% endif %}
+
+{% if videos is defined %}
+{% for video in videos %}
+
+<div class="col mb-3 d-flex">
+    <div class="card rounded-0 border-0 mb-5">
+        <img class="img-fluid" src="{{ asset('media/images/video.jpg') | imagine_filter('figure_thumb') }}" alt="{{ figure.name }}" />
+        
+        <div class="form-add-media row row-cols-2">
+            <div class="col d-flex align-items-stretch justify-content-end">
+                <a href="{{ path('app_video_edit', {'id': video.id}) }}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"/>
+                </svg>
+                </a>
+            </div>
+            
+            <div class="col d-flex align-items-stretch">
+                {{ include('video/_delete_form.html.twig', {'video': video}) }}
+            </div>
+        </div>
+    </div>
+</div>
+{% endfor %}
+{% endif %}
+
 </div>
 </div>
 
