--- a/templates/figure/index.html.twig
+++ b/templates/figure/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Figure index{% endblock %}
+{% block title %}Liste de vos figures{% endblock %}
 
 {% block body %}
-    <h1 class="text-center mt-4">Figure index</h1>
+    <h1 class="text-center mt-4">Liste de vos figures</h1>
 
 <div class="container mt-4">
     <table class="table">
@@ -11,7 +11,6 @@
             <tr>
                 <th>Id</th>
                 <th>Nom</th>
-                <th>Description</th>
                 <th>Date</th>
                 <th>actions</th>
             </tr>
@@ -21,7 +20,6 @@
             <tr>
                 <td>{{ figure.id }}</td>
                 <td>{{ figure.name }}</td>
-                <td>{{ figure.description }}</td>
                 <td>{{ figure.creationDate ? figure.creationDate|date('d-m-Y') : '' }}</td>
                 <td>
                     <a href="{{ path('app_show', {'id': figure.id, 'slug': figure.slug}) }}">voir</a>
