--- a/templates/figure/new.html.twig
+++ b/templates/figure/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Nouvelle Figure{% endblock %}
 
 {% block body %}
-    <h1 class="container mt-4">Créer une nouvelle Figure</h1>
+    <h1 class="container mt-4 text-center">Créer une nouvelle Figure</h1>
 
 <div class="container mt-4">
     <div class="form-figure-form">
@@ -11,7 +11,7 @@
     {{ include('figure/_form.html.twig') }}
     </div>
     
-    <p class="mt-4">
+    <p class="mt-4 text-center">
     <a href="{{ path('app_figure_index') }}">Retour à la liste</a>
     </p>
 </div>
