--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,31 +48,13 @@
   width: 200px;
 }
 
-.form-figure-btn {
-  position: absolute;
-  right: 10px;
-  width: 200px;
-  transform: translateY(-75%);
-}
-
-.btn-form-save {
-  transform: translateX(100%);
-}
-
 .btn-form-delete {
   background-color: crimson;
   color: #fff;
-  transform: translateX(-120%);
 }
 
 .trick-info {
-  margin: auto;
-  padding-bottom: 20px;
-  width: 75%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  border-bottom: 1px solid #000;
 }
 
 .trick-info div {
@@ -80,6 +62,20 @@
   border: 1px solid #000;
   padding: 5px 10px;
   font-size: 13px;
+}
+
+.trick-footer {
+  margin: auto;
+  width: 75%;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid #000;
+  padding-bottom: 20px;
+}
+
+.trick-footer textarea {
+  border-radius: 0;
+  border: 1px solid #000;
 }
 
 .image-block {
