--- a/templates/includes/_header.html.twig
+++ b/templates/includes/_header.html.twig
@@ -23,11 +23,7 @@
         
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_figure_index') }}">Figures
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_user_edit') }}">Votre profil
+          <a class="nav-link" href="{{ path('app_user_dashboard') }}">Mon compte
           </a>
         </li>
         <li class="nav-item">
