--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,15 +7,18 @@
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
-    <h1>Inscription utilisateur</h1>
+    <h1 class="container mt-4 text-center">Inscription utilisateur</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.name, {'label': 'Votre nom'}) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
+    <div class="container mt-4 form-container">
+        {{ form_start(registrationForm) }}
+            {{ form_row(registrationForm.name, {'label': 'Votre nom'}) }}
+            {{ form_row(registrationForm.email) }}
+            {{ form_row(registrationForm.plainPassword, {
+                label: 'Password'
+            }) }}
 
-        <button type="submit" class="btn btn-primary">Register</button>
-    {{ form_end(registrationForm) }}
+            <button type="submit" class="btn btn-primary">Valider</button>
+        {{ form_end(registrationForm) }}
+    </div>
+
 {% endblock %}
